# dpb

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Pipfile  README.md  Rocket.toml  db.sqlite  manage.py  pyproject.toml  requirements.txt
dpb/: asgi.py  settings.py  urls.py  wsgi.py
examples/: collision.rs  test.rs
migrations/: 1_init.sql
pastebin/: admin.py  bench.py  forms.py  models.py  views.py
pastebin/migrations/: 0001_initial.py  0002_auto_20210319_0433.py  0003_misc.py
pastebin/templates/: base.html  code.html  index.html
src/: main.rs  view.rs
templates/: base.html.tera  index.html.tera  snippet.html.tera
